# MarketData-Dissemination-Simulator

./: .gitignore  CMakeLists.txt  README.md  dummydata_singleInstrument.json  dummydata_snapshot.json
genproto/: CMakeLists.txt
include/: IOrderBookListener.h  LoggerInterceptor.h  OrderBook.h  OrderBookManager.h  OrderBookService.h
proto/: market_data.proto
python_client/: README.md  example.py  main.py  pyproject.toml
python_client/core/: __init__.py  grpc_client.py
python_client/ui/: __init__.py  main_window.py
python_client/ui/components/: BaseWidget.py  MainWindow.py  MessageBox.py  PushButton.py  __init__.py  depth_chart.py  orderbook_table.py
source/: LoggerInterceptor.cpp  OrderBook.cpp  OrderBookManager.cpp  OrderBookService.cpp  Test - client-main.cpp  client-main.cpp  server-main.cpp
